# cookiecutter-pypackage

./: README.rst  appveyor.yml  cookiecutter.json  pytest.ini  requirements_dev.txt  setup.cfg  setup.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  release.yml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
