{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["{{ cookiecutter.project_slug }}"]
authors = [
  {email = "{{ cookiecutter.email }}"}
]
maintainers = [
  {name = "{{ cookiecutter.full_name.replace('"', '\\"') }}", email = "{{ cookiecutter.email }}"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  {%- if cookiecutter.open_source_license in license_classifiers %}
  "{{ license_classifiers[cookiecutter.open_source_license] }}",
{%- endif %}
   "Natural Language :: English",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9"
]


[project.urls]
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/master/CHANGELOG.md"

[project.scripts]
{{ cookiecutter.project_slug }}_cli = "{{ cookiecutter.project_slug }}:cli"


