[aliases]
release = sdist bdist_wheel
test = pytest

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs/*,setup.py
max-line-length = 88

{%- if cookiecutter.use_pytest == 'y' %}
[tool:pytest]
addopts = --ignore=setup.py
testpaths = tests/
{%- endif %}


[options]
include_package_data = True
packages = find:

install_requires =
  {% if cookiecutter.command_line_interface|lower == 'click' -%}
  Click{% endif %}

[options.extras_require]
dev =
  black
  bump2version
  flake8-docstrings
  flake8
  isort
  toml

dist =
  twine

docs =
  mkdocs-autorefs
  mkdocs-include-markdown-plugin
  mkdocs-material-extensions
  mkdocs-material
  mkdocs
  mkdocstrings-python-legacy
  mkdocstrings
  Sphinx
  watchdog

test =
  pytest
  pytest-cov
  tox
