{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[aliases]
release = sdist bdist_wheel
test = pytest

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}
tag_message = bump: {current_version} → {new_version}
message = bump: {current_version} → {new_version}



[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[darglint]
docstring_style={{ cookiecutter.docstrings_style }}

[flake8]
exclude = docs/*,setup.py
max-line-length = 88
docstring_style={{ cookiecutter.docstrings_style }}

{%- if cookiecutter.use_pytest == 'y' %}
[tool:pytest]
addopts = --ignore=setup.py
testpaths = tests/
{%- endif %}


[options]
include_package_data = True
packages = find:

install_requires =
  {% if cookiecutter.command_line_interface|lower == 'click' -%}
  Click{% endif %}

[options.extras_require]
dev =
  black
  commitizen
  darglint
  flake8-docstrings
  flake8
  isort
  toml

dist =
  twine

docs =
  mkdocs-autorefs
  mkdocs-include-markdown-plugin
  mkdocs-material-extensions
  mkdocs-material
  mkdocs
  mkdocstrings-python-legacy
  mkdocstrings
  watchdog

test =
  pytest
  pytest-cov
  safety
  tox


[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
url = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}"
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
platform = any
keywords =
  "{{ cookiecutter.project_slug }}"
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
{%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}
project_urls =
    Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
    Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
    Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/master/CHANGELOG.md"
    Documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}"

